# dcc-hotload-server

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dcc-hotload-server.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
dcc_hotload_server/: main.py  server.py
dcc_hotload_server/hooks/: base_hook.py  hython.py  mayapy.py
sandbox/: hython_client.py  mayapy_client.py
tests/: test_main.py  test_server.py
